# 1C_Contest

./: .gitignore  CMakeLists.txt  ForwardDeclaration.h  README.md  main.cpp
DataBase/: DataBase.cpp  DataBase.h
Solution/: Solution.h
Tests/: Queries.txt  Test1.txt
